Lower baseline to Jenkins 2.442 for LTS compatibility.
Use plugin parent 4.88, bom-2.440.x, and Java 11 compatible code.

Co-authored-by: Cursor <cursoragent@cursor.com>